# kgrag

./: .gitignore  Readme.md  pyproject.toml
chat/: README.md  chat.py
chat/api/: README.md
chat/prompts/: README.md  local_search_system.txt
chat/search/: README.md  base.py  local_search.py
chat/search/local_search/: README.md  context_builder.py  local_search.py
cli/: README.md
common/: README.md
common/config/: README.md  defaults.py
common/config/models/: chat_model_config.py  chunk_config.py  community_config.py  description_summarizer_config.py  document_loader_config.py  (+9 more)
common/embeddings/: README.md  client.py
common/llm/: README.md  base.py  chat_model.py
common/models/: README.md  community.py  document.py  entity.py  relationship.py  text_unit.py
common/prompts/: README.md  community_report.py
common/storage/: README.md  milvus_storage.py  mysql_storage.py
common/utils/: README.md
common/visualization/: README.md
data/: text1.txt
data/input/: .gitkeep
data/output/: .gitkeep
kg_construct/: README.md  chunker.py  community_detector.py  description_summarizer.py  document_loader.py  embedding_generator.py  entity_extractor.py  graph_finalizer.py  pipeline.py  report_generator.py  storage_helper.py  walkthrough.md
kg_construct/prompts/: README.md  community_report.txt  entity_extraction.txt  extract_graph.py  summarize_descriptions.txt
tests/: README.md  test_local_search.py  test_output.txt
tests/test_chat/: test_local_search_real.py
tests/test_common/: chat_model_test.py  embedding_test.py  test_milvus_connection.py
(+2 files in other folders)
